# near-hello-world

./: .gitignore  README.md  package.json  pnpm-lock.yaml
contract/: .gitignore  Cargo.toml  deploy-dev.sh  deploy.sh
contract/src/: lib.rs
frontend/: package.json
